--- a/source/_partials/terminus_navbar.html
+++ b/source/_partials/terminus_navbar.html
@@ -1,22 +1,9 @@
 <div class="col-md-2 manual-toc hidden-s">
   <ul id="manual-toc" class="manual-toc">
     <h3>Terminus Manual</h3>
-    <li><a href="/docs/terminus">Getting Started</a></li>
-    <li><a href="/docs/terminus/install">Installation</a></li>
-    <li><a href="/docs/terminus/commands">Commands</a></li>
-    <li><a href="/docs/terminus/examples">Example Usage</a></li>
-    <li><a href="/docs/terminus/extend">Extend</a></li>
-      <ul class="manual-toc">
-        <li><a href="/docs/terminus/extend/plugins">Plugins</a></li>
-        <li><a href="/docs/terminus/extend/create-plugins">Create Plugin</a></li>
-      </ul>
-    <li><a href="/docs/terminus/contribute">Contribute</a></li>
-      <ul class="manual-toc">
-        <li><a href="/docs/terminus/contribute/style-guide">Style Guide</a></li>
-      </ul>
-    <li><a href="/docs/terminus/versions">Version Updates</a></li>
+    <li><a id="docs-terminus" href="/docs/terminus">Getting Started</a></li>
+    <li><a id="docs-terminus-install" href="/docs/terminus/install">Installation</a></li>
+    <li><a id="docs-terminus-commands" href="/docs/terminus/commands">Commands</a></li>
+    <li><a id="docs-terminus-examples" href="/docs/terminus/examples">Example Usage</a></li>
   </ul>
-    <!--{% for terminuspage in site.terminuspages %}
-      <a id="{{terminuspage.slug |trim('/')|replace('/','-')}}" href="/{{ terminuspage.url |trim('/') }}"><li>{{ terminuspage.name }}</li></a>
-    {% endfor %}-->
 </div>
