--- a/source/_views/terminuspage.html
+++ b/source/_views/terminuspage.html
@@ -8,8 +8,8 @@
   <div class="col-xs-12 col-md-9 manual-doc">
   {% endif %}
     <header>
-      <h1>{{ page.title }} <small>Terminus</small></h1>
-      {% set fullpath = page.url|replace({'/terminus': '/_terminuspages'}) %}
+      <h1>{{ page.title[17:] }}</h1>
+      {% set fullpath = page.url %}
       <div class="dropdown">
       <button class="btn btn-contribute dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
           <span class="icon-github"></span>
