--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -49,11 +49,10 @@
         if(/\/terminus.*/.test(aObj[i].href)>=1) {
           $('#docs').removeClass('active-trail');
         }
-
       }
     }
   }
-  window.onload = setActive;
+  window.addEventListener("load", setActive);
   </script>
   {% if page.terminuspage %}
 
@@ -78,7 +77,7 @@
       }
     }
   }
-  window.onload = setActivetrail;
+  window.addEventListener("load", setActivetrail);
   </script>
   {% endif %}
 
