First pass at command ref table using angularjs

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -2,6 +2,7 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
   <script src="/docs/assets/js/main.js"></script>
   <script src="/docs/assets/js/vendor/jquery-ui-1.9.1.custom.min.js"></script>
   <script src="/docs/assets/js/highlight.pack.js"></script>
