--- a/source/_partials/terminus_navbar.html
+++ b/source/_partials/terminus_navbar.html
@@ -1,6 +1,6 @@
 <div class="col-md-2 manual-toc hidden-s">
   <ul id="manual-toc" class="manual-toc">
-    <h3 style="margin-left:20px;padding-bottom:10px;">Terminus Manual</h3>
+    <h3 style="padding:0px 0px 10px 30px;">Terminus Manual</h3>
     <li><a id="docs-terminus" href="/docs/terminus">Getting Started</a></li>
     <li><a id="docs-terminus-install" href="/docs/terminus/install">Installation</a></li>
     <li><a id="docs-terminus-commands" href="/docs/terminus/commands">Commands</a></li>
