--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -31,30 +31,6 @@
     }
   });
   </script>
-
-  <script type="text/javascript">
-  function setActive() {
-    aObj = document.getElementById('dropmenu').getElementsByTagName('a');
-    for(i=0;i<aObj.length;i++) {
-      if(document.location.href.indexOf(aObj[i].href)>=0 ){
-        aObj[i].className='active-trail';
-        if(/\/guides.*/.test(aObj[i].href)>=1) {
-          $('#docs').removeClass('active-trail');
-        }
-        if(/\/contributor.*/.test(aObj[i].href)>=1) {
-          $('#docs').removeClass('active-trail');
-        }
-        if(/\/changelog.*/.test(aObj[i].href)>=1) {
-          $('#docs').removeClass('active-trail');
-        }
-        if(/\/terminus.*/.test(aObj[i].href)>=1) {
-          $('#docs').removeClass('active-trail');
-        }
-      }
-    }
-  }
-  window.addEventListener("load", setActive);
-  </script>
   {% if page.terminuspage %}
 
   <script type="text/javascript">
@@ -81,6 +57,30 @@
   window.addEventListener("load", setActivetrail);
   </script>
   {% endif %}
+
+  <script type="text/javascript">
+  function setActive() {
+    aObj = document.getElementById('dropmenu').getElementsByTagName('a');
+    for(i=0;i<aObj.length;i++) {
+      if(document.location.href.indexOf(aObj[i].href)>=0 ){
+        aObj[i].className='active-trail';
+        if(/\/guides.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+        if(/\/contributor.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+        if(/\/changelog.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+        if(/\/terminus.*/.test(aObj[i].href)>=1) {
+          $('#docs').removeClass('active-trail');
+        }
+      }
+    }
+  }
+  window.onload = setActive;
+  </script>
 
   <!-- Marketo Munchkin -->
   <script type="text/javascript">
