Add slackin badge to docs view

--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -17,7 +17,7 @@
                   </ul>
                 </div>
                 <a data-proofer-ignore class="twitter-share-button" data-count="vertical" data-url="https://pantheon.io{{ page.url }}"></a>
-                <script data-proofer-ignore  type="IN/Share" data-counter="none" data-url="https://pantheon.io{{ page.url }}"></script><br>
+                <script async defer src="https://pantheon-community-slackin.herokuapp.com/slackin.js"></script><br>
                 {% if page.categories %}
                 <small><i class="fa fa-folder"></i> Categories:</small>
                 {% for category in page.categories %}
