--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -1,7 +1,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
   <!-- Latest compiled and minified JavaScript -->
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular/angular.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-material/angular-material.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-animate/angular-animate.min.js"></script>
+  <script src="/docs/assets/js/node_modules/angular-aria/angular-aria.min.js"></script>
   <script src="/docs/assets/js/vendor/jquery-ui-1.9.1.custom.min.js"></script>
   <script src="/docs/assets/js/highlight.pack.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
