Replace DocSearch with Google's Site Search

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -62,6 +62,6 @@
   <div class="navsearch form-group has-feedback">
       {% include("search_box.html") %}
       <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
-      <span id="docsearchicon" class="sr-only">(search)</span>
+      <span class="sr-only">(search)</span>
   </div>
 </div>
