Consistency in slackin urls

--- a/source/_views/doc.html
+++ b/source/_views/doc.html
@@ -35,7 +35,7 @@
                   }(document, "script", "twitter-wjs"));
                 </script>
                 <a class="twitter-share-button" href="https://pantheon.io{{ page.url }}/intent/tweet?text=%40getpantheon%20doc%3A%20{{ page.title }}"></a>
-                <script async defer src="https://pantheon-community-slackin.herokuapp.com/slackin.js"></script><br>
+                <script async defer src="https://slackin.pantheon.io/slackin.js"></script><br>
                 {% if page.categories %}
                 <small><i class="fa fa-folder"></i> Categories:</small>
                 {% for category in page.categories %}
