Edit page url for encoded dropdown link

--- a/source/_views/terminuspage.html
+++ b/source/_views/terminuspage.html
@@ -18,7 +18,7 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
         <li><a href="https://github.com/pantheon-systems/documentation/edit/master/source{{ fullpath }}.md" target="blank">Edit This Page</a></li>
-        <li><a href="https://github.com/pantheon-systems/documentation/issues/new?title={{page.title}}%20-+Alpha+Feedback&body=Re%3A%20%5B{{page.title}}%5D(https%3A%2F%2Fpantheon.io{{page.url}})%0A&labels=Terminus%20Alpha" target="blank">Report Doc Issue</a></li>
+        <li><a href="https://github.com/pantheon-systems/documentation/issues/new?title={{page.title}}%20-+Alpha+Feedback&body=Re%3A%20%5B{{page.title}}%5D(https%3A%2F%terminusma-static-docs.pantheonsite.io{{page.url}})%0A&labels=Terminus%20Alpha" target="blank">Report Doc Issue</a></li>
         </ul>
       </div>
       <a data-proofer-ignore class="twitter-share-button" data-count="vertical" data-url="https://pantheon.io{{ page.url }}"></a>
