Add development warning to pages site-wide

--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -93,6 +93,8 @@
     </p>
     <![endif]-->
     {% include("navbar.html") %}
+    {% include("devbar.html") %}
+
     <!-- container -->
     <div class="container-fluid">
         <div class="row">
