--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -52,7 +52,7 @@
                   <ul id="dropmenu" class="dropdown-menu">
                     <li><a id="docs" href="/docs">Docs</a></li>
                     <li><a id="guides" href="/docs/guides">Guides</a></li>
-                    <li><a id="terminus" href="/docs/terminus">Terminus Manual</a></li>
+                    <li><a id="terminus" href="/docs/terminus">Terminus Manual <span class="label label-info">Alpha</span></a></li>
                     <li><a id="changelogs" href="/docs/changelog">Changelog</a></li>
                   </ul>
                 </li>
