CSS tweaks to clipboard, alpha label and banner

--- a/source/_views/terminuspage.html
+++ b/source/_views/terminuspage.html
@@ -1,6 +1,6 @@
 {% extends "default" %}
 {% block content_wrapper %}
-<div class="col-md-12" style="padding:0px;">
+<div class="col-md-12" style="padding-right:50px;padding-left:0px;">
   {% include("terminus_navbar.html") %}
   {% if page.terminustoc %}
   <div class="col-xs-12 col-md-7 manual-doc">
