Switch default OS to Mac based on GA data

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -55,11 +55,11 @@
     $('#win').addClass('active');
     $('#wintab').addClass('active');
   }
-  if (navigator.appVersion.indexOf("Mac")!=-1) {
-    $('#linux').removeClass('active');
-    $('#linuxtab').removeClass('active');
-    $('#mac').addClass('active');
-    $('#mactab').addClass('active');
+  if (navigator.appVersion.indexOf("Lin")!=-1) {
+    $('#mac').removeClass('active');
+    $('#mactab').removeClass('active');
+    $('#linux').addClass('active');
+    $('#linuxtab').addClass('active');
   }
 
   </script>
