Clean up js logic now that mac is default

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -50,8 +50,8 @@
   {% if page.terminusinstall %}
   <script type="text/javascript">
   if (navigator.appVersion.indexOf("Win")!=-1) {
-    $('#linux').removeClass('active');
-    $('#linuxtab').removeClass('active');
+    $('#mac').removeClass('active');
+    $('#mactab').removeClass('active');
     $('#win').addClass('active');
     $('#wintab').addClass('active');
   }
