Fix indexOf syntax for Linux detection

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -55,7 +55,7 @@
     $('#win').addClass('active');
     $('#wintab').addClass('active');
   }
-  if (navigator.appVersion.indexOf("Lin")!=-1) {
+  if (navigator.appVersion.indexOf("Linux")!=-1) {
     $('#mac').removeClass('active');
     $('#mactab').removeClass('active');
     $('#linux').addClass('active');
