Replace pantheon-js-tracking.min.js with tag manager

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -135,7 +135,7 @@
 
   </script>
 
-  <script src="//pantheon.io/sites/all/themes/zeus/js/pantheon-js-tracking.min.js"></script>
+  <script type="text/javascript" src="//d2qkfn813cyz6e.cloudfront.net/js/pantheon-js-tracking.min.js?d=e"></script>
   <script type="text/javascript">
   defaults = {'utm_content': window.location.pathname,
               'utm_source': document.referrer,
