Docs redesign first draft

--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -51,4 +51,160 @@
       <p>&copy; {{ "now"|date("Y") }} Pantheon | 717 California Street, San Francisco, CA</p>
   </div>
 
+            <section class="block block-menu-block" id="block-menu-block-12">
+              <h2 class="block__title">Topics</h2>
+
+              <div class="block__content content">
+                <div class="menu-block-wrapper menu-block-12 menu-name-menu-footer-menu parent-mlid-1146 menu-level-1">
+
+                    <div class="footer-topic-col1">
+                      <ul class="menu">
+                        <li class="first leaf menu-mlid-1147">
+                          <a href="/docs/develop">Develop</a>
+                        </li>
+                        <li class="leaf menu-mlid-1148">
+                          <a href="/docs/get-started">Get Started </a>
+                        </li>
+                        <li class="leaf menu-mlid-1149">
+                          <a href="/docs/go-live">Go Live</a>
+                        </li>
+                        <li class="leaf menu-mlid-1162">
+                          <a href="/docs/integrate">Integrate Apps and Services</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="footer-topic-col2">
+                      <ul class="menu">
+                        <li class="first leaf menu-mlid-1147">
+                          <a href="/docs/infrastructure">Manage and Understand Infrastructure</a>
+                        </li>
+                        <li class="leaf menu-mlid-1148">
+                          <a href="/docs/manage">Manage Teams and Organizations</a>
+                        </li>
+                        <li class="leaf menu-mlid-1149">
+                          <a href="/docs/optimize">Optimize Performance</a>
+                        </li>
+                        <li class="leaf menu-mlid-1162">
+                          <a href="/docs/troubleshoot">Troubleshoot</a>
+                        </li>
+                      </ul>
+                    </div>
+
+
+
+
+                </div>
+              </div><!-- /.content -->
+            </section><!-- /.block -->
+
+            <section class="block block-menu-block" id="block-menu-block-13">
+              <h2 class="block__title">Community</h2>
+              <div class="block__content content">
+                <div class="menu-block-wrapper menu-block-13 menu-name-menu-footer-menu parent-mlid-1141 menu-level-1">
+                  <ul class="menu">
+                    <li class="first leaf menu-mlid-1142">
+
+                      <a href="/code-of-conduct">Code of Conduct</a>
+                    </li>
+                    <li class="leaf menu-mlid-1188">
+                      <a href="/contributors">Contributors</a>
+                    </li>
+                    <li class="leaf menu-mlid-1143">
+                      <a href="/power-users">Community and Power Users Group</a>
+                    </li>
+                    <li class="last leaf menu-mlid-1145">
+                      <a href="">Learn to Contribute</a>
+                    </li>
+                  </ul>
+                </div>
+              </div><!-- /.content -->
+            </section><!-- /.block -->
+
+            <section class="block block-menu-block" id="block-menu-block-14">
+              <h2 class="block__title">Help</h2>
+              <div class="block__content content">
+                <div class="menu-block-wrapper menu-block-14 menu-name-menu-footer-menu parent-mlid-1150 menu-level-1">
+                  <ul class="menu">
+                    <li class="first leaf menu-mlid-1151">
+                      <a href="/contact-us">Contact</a>
+                    </li>
+                    <li class="leaf menu-mlid-1152">
+                      <a href="/agencies/agency-finder">Find an Agency</a>
+                    </li>
+                    <li class="leaf menu-mlid-1153">
+                      <a href="http://status.pantheon.io/">Status</a>
+                    </li>
+                    <li class="last leaf menu-mlid-1154">
+                      <a href="/support">Support</a>
+                    </li>
+                  </ul>
+                </div>
+              </div><!-- /.content -->
+            </section><!-- /.block -->
+
+            <div class="block block-block" id="block-block-4">
+              <div class="block__content content">
+                  <div class="license-wrapper">
+                    <div class="copyright license-text">
+                        Our Documentation is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. Code snippets are additionally licensed under The MIT License.
+                    </div>
+
+                    <div class="license-logo">
+                      <img src="../docs/assets/images/CC-BY-SA_icon.png" alt="Creative Commons Attribution-ShareAlike Logo">
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="copyright">
+                  © 2016 Pantheon <span>|</span> 717 California Street, San Francisco, CA <span class="responsive-pipe">|</span> <a class="new-line" href="/privacy">Privacy Policy</a> <span>|</span> <a href="/pantheon-terms-service">Terms of Use</a>
+                </div>
+              </div><!-- /.content -->
+            </div><!-- /.block -->
+          </div>
+        </div>
+
+        <div class="region region-footer-col3">
+          <div class="block block-block" id="block-block-39">
+            <div class="block__content content">
+              <div id="social-links-wrapper">
+                <ul class="social-links">
+                  <li>
+                    <a class="social-link" href="https://www.facebook.com/getpantheon"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="https://twitter.com/getpantheon"><i class="fa fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="https://www.linkedin.com/company/pantheon-systems-inc"><i class="fa fa-linkedin"></i></a>
+                  </li>
+                  <li>
+                    <a class="social-link" href="https://www.youtube.com/user/GetPantheon"><i class="fa fa-youtube-play"></i></a>
+                  </li>
+                  <li class="blog-link-li">
+                    <a class="blog-link" href="/blog">Pantheon Blog<i class="fa fa-angle-right"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <div id="footer-subscribe">
+                <div class="left">
+                  <h4>INSIGHT. DELIVERED MONTHLY.</h4>
+                  <p>Awesome development news, tutorials, and tips. Plus get 3 free downloads, just for signing up. If you don't love it, unsubscribe with just a click.</p>
+                </div>
+                <div class="right">
+                  <script src="https://app-ab05.marketo.com/js/forms2/js/forms2.min.js">
+                  </script>
+                  <form id="mktoForm_2014" name="mktoForm_2014"></form>
+                  <script>
+                  MktoForms2.loadForm("https://app-ab05.marketo.com","316-GSV-089",2014,function(o){o.onSuccess(function(t,m){return $form=o.getFormElem(),$form.css("height",$form.css("height")).html("<p>Thank You for Signing Up<\/p>"),!1})});
+                  </script>
+                </div>
+              </div>
+            </div><!-- /.content -->
+          </div><!-- /.block -->
+        </div>
+      </div>
+
+    </div>
+  </footer>
 </div>
