--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -89,9 +89,34 @@ terminusCompareApp.filter('search', function() {
                 <li class="dropdown">
                   <a href="/docs" class="dropdown-toggle active-trail" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding-bottom:19px;">Documentation <span id="drop-rsaquo">&rsaquo;</span></a>
                   <ul id="dropmenu" class="dropdown-menu">
-                    <li><a id="docs" href="/docs">Docs</a></li>
-                    <li><a id="guides" href="/docs/guides">Guides</a></li>
-                    <li><a id="changelogs" href="/docs/changelog">Changelog</a></li>
+                  <div class="row sub-menu-top">
+                    <div class="col-xs-6">
+
+                        <li><a id="docs" href="/docs">Getting Started</a></li>
+                        <li><a id="guides" href="/docs/guides">Developing on Pantheon</a></li>
+                        <li><a id="terminus" href="/docs/terminus">Optimizing Performance</a></li>
+                        <li><a id="changelogs" href="/docs/changelog">Troubleshooting</a></li>
+
+                    </div>
+
+                    <div class="col-xs-6">
+
+                        <li><a id="docs" href="/docs">Going Live</a></li>
+                        <li><a id="guides" href="/docs/guides">Platform & Infrastructure </a></li>
+                        <li><a id="terminus" href="/docs/terminus">Automating & Integrating</a></li>
+                        <li><a id="changelogs" href="/docs/changelog">Managing Users & Organizations</a></li>
+
+                    </div>
+                  </div>
+
+                  <div class="row sub-menu-bottom">
+                      <div class="col-xs-12">
+                        <li><a id="terminus" href="/docs/terminus">Terminus Manual</a></li>
+                        <li><a id="changelogs" href="/docs/changelog">Changelog</a></li>
+                      </div>
+
+
+                  </div>
                   </ul>
                 </li>
               </ul>
